@@ -1,5 +1,10 @@
 2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
+	* Download.aspx.cs: Add support for downloading workfiles
+	by name.
+
+2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
 	* WebServices.asmx: Update according to DB API changes.
 
 2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>
